--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Moran's I Visualization</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="plot_style.css" />
-        <script src="jquery.min.js"></script>
-        <script src="bundle.js"></script>
+        <script src="public/jquery.min.js"></script>
+        <script src="public/bundle.js"></script>
     </head>
     <body>
         <main>
