--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <h3 id="county_name"></h3>
                         <p>Value: 100m</p>
                         <p>Local Moran: 1201</p>
+                        <p>Local Moran P-Value: 1201</p>
                     </div>
                 </div>
             </div>
@@ -41,7 +42,7 @@
             <div id="plot_types">
                 <div id="type_heatmap" class="option">Heat Map</div>
                 <div id="type_stacked_heatmap" class="option">Stacked Heat Map</div>
-                <div id="type_quantile" class="option">Quantile</div>
+                <div id="type_quantile" class="option">Quantile Map</div>
             </div>
             <div id="plot_map"></div>
             <div id="plot_timeline">
