--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 The following section is just the plot part, if you want to extract it for your own use
                 requires: - plot_style.css
                           - jquery
-                          - bundle.js
+                          - public/bundle.js
 
             -->
             <div id="alex_plot">
