--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Moran's I Visualization</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="plot_style.css" />
-    <script src="public/jquery.min.js"></script>
+    <script src="public/jquery-3.5.1.min.js"></script>
     <script src="public/bundle.js"></script>
 </head>
 
@@ -40,21 +40,64 @@
                     </div>
                     <div id="color_display">
                         <div id="quantile_colors">
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
+                            <div id="group1">
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            </div>
+                            <div id="group2">
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            </div>
                         </div>
                         <div id="heat_colors">
-                            <div class="color"></div>
-                            <div class="color"></div>
-                            <div class="color"></div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
                         </div>
                     </div>
                 </div>
