--- a/index.html
+++ b/index.html
@@ -57,20 +57,8 @@
                                 <div class="color"></div>
                                 <p></p>
                             </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
                             </div>
                             <div id="group2">
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
                             <div class="color_container">
                                 <div class="color"></div>
                                 <p></p>
@@ -104,9 +92,9 @@
             </div>
             <hr style="border: solid black 1px; width: 100%" />
             <div id="plot_types">
-                <div id="type_heatmap" class="option option_selected">Heat Map</div>
-                <div id="type_stacked_heatmap" class="option">Stacked Heat Map</div>
-                <div id="type_quantile" class="option">Quantile Map</div>
+                <div id="type_heatmap" class="option option_selected">LISA Map</div>
+                <div id="type_stacked_heatmap" class="option">Stacked LISA Map</div>
+                <div id="type_quantile" class="option">Average Distance Per County</div>
             </div>
             <div id="plot_title"><h3 id="plot_date">Distance Travelled</h3></div>
             <div id="plot_map"></div>
