--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <main>
-        <!--
         <h1>This is the title</h1>
-        <p>This is a description.</p>
-        -->
+        <i>Created by ... under the guidance of ... as a part of MOVE UCSB /
+            <a href="ink">this</a> paper.
+        </i>
         <!--
 
                 The following section is just the plot part, if you want to extract it for your own use
@@ -23,6 +23,12 @@
                           - public/bundle.js
 
             -->
+        <h3>LISA Map</h3>
+        <p>Here is what this map is showing.</p>
+        <h3>Stacked LISA Map</h3>
+        <p>Here is what this map is showing.</p>
+        <h3>Average Distance Per County</h3>
+        <p>Here is what this map is showing.</p>
         <div id="alex_plot">
             <hr style="border: solid black 1px; width: 100%" />
             <div id="plot_header">
@@ -41,48 +47,48 @@
                     <div id="color_display">
                         <div id="quantile_colors">
                             <div id="group1">
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
                             </div>
                             <div id="group2">
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
-                            <div class="color_container">
-                                <div class="color"></div>
-                                <p></p>
-                            </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
+                                <div class="color_container">
+                                    <div class="color"></div>
+                                    <p></p>
+                                </div>
                             </div>
                         </div>
                         <div id="heat_colors">
@@ -108,7 +114,9 @@
                 <div id="type_stacked_heatmap" class="option">Stacked Heat Map</div>
                 <div id="type_quantile" class="option">Quantile Map</div>
             </div>
-            <div id="plot_title"><h3 id="plot_date">Distance Travelled</h3></div>
+            <div id="plot_title">
+                <h3 id="plot_date">Distance Travelled</h3>
+            </div>
             <div id="plot_map"></div>
             <div id="plot_timeline">
             </div>
@@ -125,11 +133,21 @@
             </div>
             <hr style="border: solid black 1px; width: 100%" />
         </div>
-        <!--
+        <i>Source: Safegraph</i>
 
 
+        <h3>Global Moran I</h3>
+        <p>This is a description.<sup>[1]</sup></p>
+        <h3>Local Moran I</h3>
 
-            -->
+        <h3>False Discovery Rate</h3>
+
+        <h3>Methadology / How it was calculated / Data and Processing</h3>
+        <p>Here is how I did the calculations. See the function here:<a href="">Link to other repo</a></p>
+
+        <h4>References</h4>
+        <p>1. I could also put references down here like a paper.</p>
+
     </main>
 </body>
 
