--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                                 <div class="color"></div>
                                 <p></p>
                             </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
+                            <div class="color_container">
+                                <div class="color"></div>
+                                <p></p>
+                            </div>
                             </div>
                         </div>
                         <div id="heat_colors">
